# anki-silent-sync

./: README.md  pyproject.toml
src/anki_silent_sync/: __init__.py  sync.py
